--- a/wiki/lhVimLib.wiki
+++ b/wiki/lhVimLib.wiki
@@ -19,10 +19,12 @@ This library has been conceived as a suite of |autoload| plugins, and a few
 || `lh#option#Get()` || Fetches the value of a user defined option, that may be _empty_ ||
 || `lh#option#GetNonEmpty()` || Fetches the value of a user defined option, that is not _empty_ ||
 || `lh#list#Match()` || Searches the first element in a list that matches a pattern ||
+|| `lh#list#Find_if()` || Searches the first element in a list that verifies a predicate ||
 || `lh#askvim#Exe()` || Returns what a VimL command echoes ||
 || `lh#position#IsBefore()` || Tells if a position in a buffer is before another one||
 || `lh#position#CharAtMark()` || Obtains the character under a mark ||
 || `lh#position#CharAtPos()` || Obtains the character at a given position ||
+|| `lh#event#RegisterForOneExecutionAt()` || Registers a command to be executed once (and only once) when an event is triggered on the current file ||
 
 
 === Paths related functions ===
