--- a/wiki/lhVimLib.wiki
+++ b/wiki/lhVimLib.wiki
@@ -25,11 +25,12 @@ This library has been conceived as a suite of |autoload| plugins, and a few
 || `lh#position#CharAtMark()` || Obtains the character under a mark ||
 || `lh#position#CharAtPos()` || Obtains the character at a given position ||
 || `lh#event#RegisterForOneExecutionAt()` || Registers a command to be executed once (and only once) when an event is triggered on the current file ||
+|| `lh#encoding#Iconv()` || Unlike `iconv()`, this wrapper returns {expr} when we know no convertion can be acheived. ||
 
 
 === Paths related functions ===
-|| `lh#path#Simplify()` || Like `simplify()`, but also strip the leading `./` ||
-|| `lh#path#StripCommon()` || In a set of pathnames, strip the leading part they all have in common ||
+|| `lh#path#Simplify()` || Like `simplify()`, but also strips the leading `./` ||
+|| `lh#path#StripCommon()` || In a set of pathnames, strips the leading part they all have in common ||
 || `lh#path#StripStart()` || Strips the leading part of a pathname if found in the given list of pathnames ||
 || `lh#path#isAbsolutePath()` || Tells whether the parameter is an absolute pathname ||
 || `lh#path#isURL()` || Tells whether the parameter is an URL ||
@@ -45,8 +46,7 @@ This library has been conceived as a suite of |autoload| plugins, and a few
 
 === Menus related functions ===
 || `lh#menu#DefToggleItem()` || This function defines a |menu| entry that will be associated to a |global-variable| whose values can be cycled and explored from the menu. This global variable can be seen as an enumerate whose value can be cyclically updated through a menu. ||
-|| `lh#menu#Text()` || Transforms a regular text into a text that can be
-directly used with `:menu` commands. ||
+|| `lh#menu#Text()` || Transforms a regular text into a text that can be directly used with `:menu` commands. ||
 || `lh#menu#Make()` || Helper function to associate menus and mappings to actions in different modes ||
 || `lh#menu#IVN_Make()` || Like `lh#menu#Make()`, but dedicated to text inserting actions and INSERT, NORMAL, and VISUAL modes ||
 || `lh#menu#CMD_andclear_v()` || «» ||
@@ -68,14 +68,32 @@ directly used with `:menu` commands. ||
 || `lh#syntax#NameAtMark()` || Tells the syntax kind of the character at the given mark ||
 || `lh#syntax#Skip()` `lh#syntax#SkipAt()` `lh#syntax#SkipAtMark()` || Helper functions to be used with `searchpair()` in order to ignore comments, doxygen comments, strings, and characters while searching ||
 || `lh#syntax#SynListRaw()` || Returns the result of "`syn list {group-name}`" as a string ||
-|| `lh#syntax#SynList()` || Like `lh#syntax#SynListRaw()`, but reinterpret the results (experimental) ||
+|| `lh#syntax#SynList()` || Like `lh#syntax#SynListRaw()`, but reinterprets the results (experimental) ||
 
 
+=== UI functions ===
+All the functions defined in ui-functions.vim are wrappers around Vim
+interactive functions. Depeding on a configuration variable
+(`[bg]:ui_type`), they will delegate the interaction to a gvim UI
+function, or a plain text UI function (defined by vim, or emulated)
+
+|| `IF()`  || Acts as the ternary operator ||
+|| `SWITCH()` || «» ||
+|| `CONFIRM()` || Similar to `confirm()` ||
+|| `INPUT()` || Calls `inputdialog()` or `input()` ||
+|| `COMBO()` || Emulates a combobox UI function ||
+|| `WHICH()` || Wrapper around functions like `CONFIRM()` or `COMBO()` that returns the text of the selected item instead of the index of the selected item ||
+|| `CHECK()` || Emulates a checbox UI function ||
+
+In the same thematics, see also [http://www.vim.org/scripts/script.php?script_id=2160 VFT - Vim Form Toolkit]
+
+=== Word Tools ===
+See [http://hermitte.free.fr/vim/idx-splitted.php]
 
 
 = Download =
   * Requirements: Vim 7.+
-  * As a vimball: [http://lh-vim.googlecode.com/files/lh-vim-lib.vba lh-vim-lib.vba]
+  * As a vimball: [http://lh-vim.googlecode.com/files/lh-vim-lib-2.0.7.vba lh-vim-lib.vba]
   * Checkout from the SVN repository
     {{{  
 # Non-members may check out a read-only working copy anonymously over HTTP.
